turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:16: error: not found: value rule
    		(rule(state)(couleurActuelle)(MVT_SUIVANT)) match{
                 ^Turmite:27: error: not found: value colors
   	while (getCouleurSol!=colors(i)){
                              ^Turmite:33: error: not found: value rule
		if(rule(state)(couleurActuelle)(ETAT_SUIVANT)==0){
                   ^Turmite:42: error: not found: value rule
		setCouleurBrosse(rule(state)(couleurActuelle)(CLR_SUIVANT))
                                 ^